--- a/css/gallery.css
+++ b/css/gallery.css
@@ -8,7 +8,7 @@ img {
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  position: relative;
+  /* position: relative; */
   margin: auto;
 }
 
